--- a/app/src/main/res/layout/fragment_superheroes_detail.xml
+++ b/app/src/main/res/layout/fragment_superheroes_detail.xml
@@ -4,126 +4,108 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#141A31"
+    android:background="@color/background_color"
     tools:context="ui.fragments.SuperheroesDetailFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
+        <ScrollView
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:padding="16dp">
 
-            <ScrollView
-                android:id="@+id/scrollView"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/rounded_corner_background"
+                android:padding="16dp"
+                android:elevation="4dp">
 
-
-                <LinearLayout
+                <TextView
+                    android:id="@+id/tvTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    tools:text="Title" />
 
+                <ImageView
+                    android:id="@+id/ivImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:srcCompat="@mipmap/ic_launcher_round"
+                    android:scaleType="centerCrop"
+                    android:background="@drawable/rounded_corner_background"/>
 
-                    <TextView
-                        android:id="@+id/tvTitle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                <TextView
+                    android:id="@+id/tvLongDesc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="8dp"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    tools:text="Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit." />
 
-                        android:gravity="center_horizontal"
-                        android:paddingBottom="10dp"
-                        android:textColor="@color/white"
-                        android:textSize="25sp"
-                        tools:text="Title" />
+                <TextView
+                    android:id="@+id/tvPosition"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="8dp"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    tools:text="First Appearance: " />
 
-                    <com.makeramen.roundedimageview.RoundedImageView
-                        android:id="@+id/ivImage"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        app:riv_corner_radius="10dp"
-                        tools:src="@mipmap/ic_launcher" />
+                <TextView
+                    android:id="@+id/tvCountry"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="8dp"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    tools:text="Powers: " />
 
-                    <TextView
-                        android:id="@+id/tvLongDesc"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                <TextView
+                    android:id="@+id/tvFoot"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="8dp"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    tools:text="Main Weapon: " />
 
-                        android:paddingLeft="15dp"
-                        android:paddingTop="15dp"
-                        android:paddingRight="15dp"
-                        android:paddingBottom="10dp"
-                        android:textColor="@color/white"
-                        android:textSize="20sp"
-                        android:text="Descripcion: " />
+                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+                    android:id="@+id/youtube_player_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp" />
+            </LinearLayout>
+        </ScrollView>
 
-                    <TextView
-                        android:id="@+id/tvPosition"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-
-                        android:paddingLeft="15dp"
-                        android:paddingTop="15dp"
-                        android:paddingRight="15dp"
-                        android:paddingBottom="10dp"
-                        android:textColor="@color/white"
-                        android:textSize="20sp"
-                        android:text="Primera aparicion: " />
-
-                    <TextView
-                        android:id="@+id/tvCountry"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-
-                        android:paddingLeft="15dp"
-                        android:paddingTop="15dp"
-                        android:paddingRight="15dp"
-                        android:paddingBottom="10dp"
-                        android:textColor="@color/white"
-                        android:textSize="20sp"
-                        android:text="Poderes: " />
-
-
-
-                    <TextView
-                        android:id="@+id/tvFoot"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-
-                        android:paddingLeft="15dp"
-                        android:paddingTop="15dp"
-                        android:paddingRight="15dp"
-                        android:paddingBottom="10dp"
-                        android:textColor="@color/white"
-                        android:textSize="20sp"
-                        android:text="Arma principal: " />
-
-
-                </LinearLayout>
-            </ScrollView>
-
-            <ProgressBar
-                android:id="@+id/pbLoading"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:indeterminateDrawable="@drawable/loading_anim"
-                android:indeterminateDuration="1500"
-                android:layout_centerInParent="true"
-                />
-
-        </RelativeLayout>
-
+        <ProgressBar
+            android:id="@+id/pbLoading"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:indeterminateDrawable="@drawable/loading_anim"
+            android:layout_gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </FrameLayout>
+
