--- a/app/src/main/res/layout/fragment_superheroes_detail.xml
+++ b/app/src/main/res/layout/fragment_superheroes_detail.xml
@@ -93,6 +93,16 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp" />
+                <!-- Fragmento de Google Maps -->
+                <fragment
+                    android:id="@+id/map"
+                    android:name="com.google.android.gms.maps.SupportMapFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    app:layout_constraintTop_toBottomOf="@id/youtube_player_view"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
             </LinearLayout>
         </ScrollView>
 
